# ambigen

./: .gitignore  .project-context  LastSteps.md  README.md  project.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ambigen/: __init__.py  __main__.py  animator.py  audio_mixer.py  cli.py  config.py  image_gen.py  renderer.py  suno.py
presets/: cozy_tavern.yaml  forest_stream.yaml  rainy_cafe.yaml  space_ambient.yaml
tests/: test_animator.py  test_cli.py  test_config.py  test_image_gen.py
